# floryn

./: .gitignore  pyproject.toml  test_reminder.py
prompts/: reminder.j2
src/: __init__.py  main.py  prompt_renderer.py  reminder.py  speech_to_text.py
